@@ -287,29 +287,29 @@ CONFIG_WHICH=y
 #
 # Editors
 #
-# CONFIG_AWK is not set
+CONFIG_AWK=y
 # CONFIG_FEATURE_AWK_MATH is not set
 # CONFIG_CMP is not set
-# CONFIG_DIFF is not set
+CONFIG_DIFF=y
 # CONFIG_FEATURE_DIFF_BINARY is not set
 # CONFIG_FEATURE_DIFF_DIR is not set
 # CONFIG_FEATURE_DIFF_MINIMAL is not set
 # CONFIG_ED is not set
 # CONFIG_PATCH is not set
 CONFIG_SED=y
-# CONFIG_VI is not set
-CONFIG_FEATURE_VI_MAX_LEN=
-# CONFIG_FEATURE_VI_COLON is not set
-# CONFIG_FEATURE_VI_YANKMARK is not set
-# CONFIG_FEATURE_VI_SEARCH is not set
-# CONFIG_FEATURE_VI_USE_SIGNALS is not set
-# CONFIG_FEATURE_VI_DOT_CMD is not set
-# CONFIG_FEATURE_VI_READONLY is not set
-# CONFIG_FEATURE_VI_SETOPTS is not set
-# CONFIG_FEATURE_VI_SET is not set
-# CONFIG_FEATURE_VI_WIN_RESIZE is not set
-# CONFIG_FEATURE_VI_OPTIMIZE_CURSOR is not set
-# CONFIG_FEATURE_ALLOW_EXEC is not set
+CONFIG_VI=y
+CONFIG_FEATURE_VI_MAX_LEN=1024
+CONFIG_FEATURE_VI_COLON=y
+CONFIG_FEATURE_VI_YANKMARK=y
+CONFIG_FEATURE_VI_SEARCH=y
+CONFIG_FEATURE_VI_USE_SIGNALS=y
+CONFIG_FEATURE_VI_DOT_CMD=y
+CONFIG_FEATURE_VI_READONLY=y
+CONFIG_FEATURE_VI_SETOPTS=y
+CONFIG_FEATURE_VI_SET=y
+CONFIG_FEATURE_VI_WIN_RESIZE=y
+CONFIG_FEATURE_VI_OPTIMIZE_CURSOR=y
+CONFIG_FEATURE_ALLOW_EXEC=y
 
 #
 # Finding Utilities
@@ -431,14 +431,14 @@ CONFIG_FEATURE_DMESG_PRETTY=y
 # CONFIG_FEATURE_FBSET_READMODE is not set
 # CONFIG_FDFLUSH is not set
 # CONFIG_FDFORMAT is not set
-# CONFIG_FDISK is not set
+CONFIG_FDISK=y
 CONFIG_FDISK_SUPPORT_LARGE_DISKS=y
-# CONFIG_FEATURE_FDISK_WRITABLE is not set
-# CONFIG_FEATURE_AIX_LABEL is not set
-# CONFIG_FEATURE_SGI_LABEL is not set
-# CONFIG_FEATURE_SUN_LABEL is not set
-# CONFIG_FEATURE_OSF_LABEL is not set
-# CONFIG_FEATURE_FDISK_ADVANCED is not set
+CONFIG_FEATURE_FDISK_WRITABLE=y
+CONFIG_FEATURE_AIX_LABEL=y
+CONFIG_FEATURE_SGI_LABEL=y
+CONFIG_FEATURE_SUN_LABEL=y
+CONFIG_FEATURE_OSF_LABEL=y
+CONFIG_FEATURE_FDISK_ADVANCED=y
 CONFIG_FREERAMDISK=y
 # CONFIG_FSCK_MINIX is not set
 # CONFIG_MKFS_MINIX is not set
@@ -534,7 +534,7 @@ CONFIG_FEATURE_MAKEDEVS_LEAF=y
 # Networking Utilities
 #
 # CONFIG_FEATURE_IPV6 is not set
-# CONFIG_VERBOSE_RESOLUTION_ERRORS is not set
+CONFIG_VERBOSE_RESOLUTION_ERRORS=y
 # CONFIG_ARP is not set
 # CONFIG_ARPING is not set
 # CONFIG_DNSD is not set
@@ -594,12 +594,12 @@ CONFIG_IFUPDOWN_IFSTATE_PATH="/var/run/ifstate"
 # CONFIG_FEATURE_IPCALC_FANCY is not set
 # CONFIG_FEATURE_IPCALC_LONG_OPTIONS is not set
 # CONFIG_NAMEIF is not set
-# CONFIG_NC is not set
-# CONFIG_NC_SERVER is not set
+CONFIG_NC=y
+CONFIG_NC_SERVER=y
 # CONFIG_NC_EXTRA is not set
 # CONFIG_NETSTAT is not set
 # CONFIG_FEATURE_NETSTAT_WIDE is not set
-# CONFIG_NSLOOKUP is not set
+CONFIG_NSLOOKUP=y
 CONFIG_PING=y
 # CONFIG_PING6 is not set
 # CONFIG_PSCAN is not set
@@ -616,7 +616,7 @@ CONFIG_ROUTE=y
 # CONFIG_FEATURE_TFTP_PUT is not set
 # CONFIG_FEATURE_TFTP_BLOCKSIZE is not set
 # CONFIG_DEBUG_TFTP is not set
-# CONFIG_TRACEROUTE is not set
+CONFIG_TRACEROUTE=y
 # CONFIG_FEATURE_TRACEROUTE_VERBOSE is not set
 # CONFIG_FEATURE_TRACEROUTE_SOURCE_ROUTE is not set
 # CONFIG_FEATURE_TRACEROUTE_USE_ICMP is not set
@@ -629,8 +629,8 @@ CONFIG_APP_UDHCPC=y
 # CONFIG_FEATURE_RFC3397 is not set
 # CONFIG_VCONFIG is not set
 CONFIG_WGET=y
-# CONFIG_FEATURE_WGET_STATUSBAR is not set
-# CONFIG_FEATURE_WGET_AUTHENTICATION is not set
+CONFIG_FEATURE_WGET_STATUSBAR=y
+CONFIG_FEATURE_WGET_AUTHENTICATION=y
 # CONFIG_FEATURE_WGET_LONG_OPTIONS is not set
 # CONFIG_ZCIP is not set
 
@@ -704,14 +704,14 @@ CONFIG_ASH_OPTIMIZE_FOR_SIZE=y
 #
 # System Logging Utilities
 #
-# CONFIG_SYSLOGD is not set
+CONFIG_SYSLOGD=y
 # CONFIG_FEATURE_ROTATE_LOGFILE is not set
 # CONFIG_FEATURE_REMOTE_LOG is not set
 # CONFIG_FEATURE_IPC_SYSLOG is not set
 CONFIG_FEATURE_IPC_SYSLOG_BUFFER_SIZE=
-# CONFIG_LOGREAD is not set
+CONFIG_LOGREAD=y
 # CONFIG_FEATURE_LOGREAD_REDUCED_LOCKING is not set
-# CONFIG_KLOGD is not set
+CONFIG_KLOGD=y
 # CONFIG_LOGGER is not set
 
 #
