@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  16 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/busy-config,
+  gen_compile.sh, +netboot/busy-config:
+  Separate out main and netboot busy-config
+
   15 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
   Use : as a regex separator instead of / since REAL_ROOT will have / in it
 
